augur-cli/crates/augur-integration-tests/tests/integration/snapshots/r3_2_snapshot_testing__r3_2_snapshot_testing_tests__determinism_normalized_timestamps.snap
---
source: tests/r3_2_snapshot_testing.tests.rs
assertion_line: 509
expression: json_str
---
{
  "metadata": {
    "id": "report-ts",
    "analysis_id": "analysis-ts",
    "graph_id": "graph-ts",
    "generated_at": 1714746300000
  },
  "config": {
    "format": "Json",
    "sort_by": "LinesSaved",
    "filter": {
      "min_confidence": null,
      "min_lines_saved": null,
      "opportunity_types": null,
      "exclude_layers": null
    },
    "output_options": {
      "include_statistics": true,
      "include_recommendations": true,
      "max_opportunities": null
    }
  },
  "opportunities": [
    {
      "opportunity_type": {
        "DeadCode": {
          "target": "func_ts"
        }
      },
      "affected_nodes": [
        "func_ts"
      ],
      "rationale": "Test",
      "layer": "Adapter",
      "metadata": {
        "confidence": 0.75,
        "estimated_lines_saved": 3
      }
    }
  ],
  "statistics": {
    "total_opportunities": 0,
    "total_lines_saved": 0,
    "average_confidence": 0.0,
    "confidence_range": {
      "max_confidence": 0.0,
      "min_confidence": 0.0
    }
  },
  "recommendations": []
}
