augur-cli/crates/augur-integration-tests/tests/integration/snapshots/r3_2_snapshot_testing__r3_2_snapshot_testing_tests__determinism_sorted_opportunities.snap
---
source: tests/r3_2_snapshot_testing.tests.rs
assertion_line: 461
expression: json1
---
{
  "metadata": {
    "id": "report-sort",
    "analysis_id": "analysis-sort",
    "graph_id": "graph-sort",
    "generated_at": 1714746300000
  },
  "config": {
    "format": "Json",
    "sort_by": "LinesSaved",
    "filter": {
      "min_confidence": null,
      "min_lines_saved": null,
      "opportunity_types": null,
      "exclude_layers": null
    },
    "output_options": {
      "include_statistics": true,
      "include_recommendations": true,
      "max_opportunities": null
    }
  },
  "opportunities": [
    {
      "opportunity_type": {
        "DeadCode": {
          "target": "z_func"
        }
      },
      "affected_nodes": [
        "z_func"
      ],
      "rationale": "Dead",
      "layer": "Logic",
      "metadata": {
        "confidence": 0.5,
        "estimated_lines_saved": 5
      }
    },
    {
      "opportunity_type": {
        "DeadCode": {
          "target": "a_func"
        }
      },
      "affected_nodes": [
        "a_func"
      ],
      "rationale": "Dead",
      "layer": "Domain",
      "metadata": {
        "confidence": 0.6,
        "estimated_lines_saved": 10
      }
    },
    {
      "opportunity_type": {
        "DeadCode": {
          "target": "m_func"
        }
      },
      "affected_nodes": [
        "m_func"
      ],
      "rationale": "Dead",
      "layer": "Domain",
      "metadata": {
        "confidence": 0.7,
        "estimated_lines_saved": 8
      }
    }
  ],
  "statistics": {
    "total_opportunities": 0,
    "total_lines_saved": 0,
    "average_confidence": 0.0,
    "confidence_range": {
      "max_confidence": 0.0,
      "min_confidence": 0.0
    }
  },
  "recommendations": []
}
