augur-cli/crates/augur-integration-tests/tests/integration/snapshots/r3_2_snapshot_testing__r3_2_snapshot_testing_tests__extraction_error_serialization_all_variants.snap
---
source: tests/r3_2_snapshot_testing.tests.rs
assertion_line: 335
expression: all_errors_json
---
[
  {
    "CargoMetadataError": "manifest not found"
  },
  {
    "IoError": "file read failed"
  },
  {
    "ParseError": "unexpected token"
  },
  {
    "InvalidMetadata": "missing field"
  },
  {
    "SourceProcessingError": "symlink cycle"
  }
]
