augur-cli/crates/augur-integration-tests/tests/integration/snapshots/r3_2_snapshot_testing__r3_2_snapshot_testing_tests__json_serialization_roundtrip.snap
---
source: tests/r3_2_snapshot_testing.tests.rs
assertion_line: 303
expression: json_str
---
{"metadata":{"id":"report-roundtrip","analysis_id":"analysis-roundtrip","graph_id":"graph-roundtrip","generated_at":1714746300000},"config":{"format":"Json","sort_by":"LinesSaved","filter":{"min_confidence":null,"min_lines_saved":null,"opportunity_types":null,"exclude_layers":null},"output_options":{"include_statistics":true,"include_recommendations":true,"max_opportunities":null}},"opportunities":[{"opportunity_type":{"DeadCode":{"target":"dead_fn"}},"affected_nodes":["dead_fn"],"rationale":"Not called","layer":"Adapter","metadata":{"confidence":0.8,"estimated_lines_saved":5}}],"statistics":{"total_opportunities":1,"total_lines_saved":5,"average_confidence":0.8,"confidence_range":{"max_confidence":0.8,"min_confidence":0.8}},"recommendations":["Recommendation 1"]}
